# NTP-Cam-Sync

./: .gitignore  Cargo.toml  README.md  cert.pem  key.pem  main.py  requirements.txt
STATIC/: api.js  audio.js  files.js  index.js  mux.js  recorder-worklet.js
WORKING/METADATA/: HISTORY.csv
dist_packages/: py_wifi_helper-2.0.4-py3-none-any.whl
network/: network.py
src/: main.rs  metadat.rs  metadata.rs  network.rs  sync.rs  upload_file.rs
src/net/: index.html
