cargo-features = ["edition2024"]

[package]
name = "ntp-cam-sync"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
axum = "0.8.8"
serde = { version = "1.0", features = ["derive"] }
sled = "0.34.7"
tokio = { version = "1", features = ["full"] }
wifi-rs = "0.2.4"
wifi_scan = "0.7.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
